# claude-token-tracker

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  db.rs  lib.rs  local_usage.rs  models.rs
src/components/: CacheStats.tsx  CostSummary.tsx  Heatmap.tsx  Insights.tsx  ModelBreakdown.tsx  RecentRequests.tsx  Settings.tsx  Sparkline.tsx  StatusBar.tsx  TodayStats.tsx  UsageChart.tsx  WeekCompare.tsx
src/hooks/: useUsageData.ts
src/lib/: types.ts
